42422
4224424224